🍕🚄 Checkpoint ./public/index.html:617503/128

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 			type="image/x-icon"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Each of these people would be the best hire your team can make." />
-		<title>Glitch Alumni Talent Board</title>
+		<meta name="description" content="Something about a starter here." />
+		<title>Glitch React Starter</title>
 	</head>
 	<body>
 		<div id="root"></div>
