🏡🏢 Checkpoint ./index.html:1062301/1826

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <link rel="icon" href="https://glitch.com/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glitch: React Starter</title>
+    
+    <meta name="description" content="A simple React site, built with Glitch. Remix it to get your own.">
+    <meta name="robots" content="index,follow">
+
+    <link rel="canonical" href="https://glitch-hello-react.glitch.me/">
+
+    <meta property="og:title" content="Hello Eleventy!">
+    <meta property="og:type" content="article">
+
+    <meta property="og:url" content="https://glitch-hello-react.glitch.me/">
+    <meta property="og:description" content="A simple React site, built with Glitch. Remix it to get your own.">
+    <meta property="og:image" content="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2Fhello-react-social.png?v=1616712748355">
+
+    <meta name="twitter:card" content="summary">
+
+    <meta name="twitter:url" content="https://glitch-hello-react.glitch.me/">
+    <meta name="twitter:title" content="Hello React!">
+    <meta name="twitter:description" content="A simple React site, built with Glitch. Remix it to get your own.">
+    <meta name="twitter:image" content="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2Fhello-react-social.png?v=1616712748355">
   </head>
   <body>
     <div id="root"></div>
