--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="canonical" href="https://glitch-hello-react.glitch.me/">
 
-    <meta property="og:title" content="Hello Eleventy!">
+    <meta property="og:title" content="Hello React!">
     <meta property="og:type" content="article">
 
     <meta property="og:url" content="https://glitch-hello-react.glitch.me/">
