Work in progress

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>VirtuRob DOM Demo</title>
+    <title>Dinnik Interpreter</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&family=Fira+Sans+Condensed&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://kit.fontawesome.com/de93d2f775.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
