Switch mostly to radix icons

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   </head>
   <body id="root" class="theme-light">
     <main>
-      <div class="dk-config">
-        <button id="themeswitcher"><span class="fa-solid fa-sun"></span></button>
-      </div>
+      <div class="dk-config" id="config-root"></div>
       <div class="dk-sessions">
         <div class="dk-header">
           <div id="dk-tabs" class="dk-tabs"></div>
@@ -33,7 +31,6 @@
         </div>
       </div>
     </main>
-    <script type="module" src="/src/theme.ts"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
