--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Dinnik Interpreter</title>
+    <title>Dusa Interpreter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,7 @@
       <div class="dk-sessions">
         <div class="dk-header">
           <div id="dk-tabs" class="dk-tabs"></div>
-          <div class="dk-logo">Dinnik</div>
+          <div class="dk-logo">Dusa</div>
         </div>
         <div class="dk-session">
           <div id="codemirror-root" class="dk-edit"></div>
