--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link href="/src/reset.css" rel="stylesheet" />
     <link href="/src/dinnik.css" rel="stylesheet" />
     <link href="/src/codemirror.css" rel="stylesheet" />
-    <link rel="icon" type="image/svg" href="/dusa-icon.svg" />
+    <link rel="icon" href="/dusa-icon.svg" />
+    <link rel="mask-icon" href="/dusa-icon.svg" color="#007FBC" />
     <script src="https://kit.fontawesome.com/de93d2f775.js" crossorigin="anonymous"></script>
   </head>
   <body id="root" class="theme-light">
