Change all the names from dinnik to dusa

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link href="/src/reset.css" rel="stylesheet" />
-    <link href="/src/dinnik.css" rel="stylesheet" />
+    <link href="/src/dusa.css" rel="stylesheet" />
     <link href="/src/codemirror.css" rel="stylesheet" />
     <link rel="icon" href="/dusa-icon.svg" />
     <link rel="mask-icon" href="/dusa-icon.svg" color="#007FBC" />
