Add a readme and link to it

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <div class="dk-sessions">
         <div class="dk-header">
           <div id="dk-tabs" class="dk-tabs"></div>
-          <div class="dk-logo">Dusa</div>
+          <div class="dk-logo">
+            <a href="https://github.com/robsimmons/dusa/blob/main/README.md">Dusa</a>
+          </div>
         </div>
         <div class="dk-session">
           <div id="codemirror-root" class="dk-edit"></div>
