Allow session divider to resize

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <a href="https://github.com/robsimmons/dusa/blob/main/README.md">Dusa</a>
           </div>
         </div>
-        <div class="dk-session">
+        <div id="session" class="dk-session">
           <div id="codemirror-root" class="dk-edit"></div>
-          <div class="dk-divider"></div>
+          <div id="session-divider"></div>
           <div id="react-root" class="dk-view"></div>
         </div>
       </div>
