Overhaul for some mobile friendliness and just-keep-running

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <a href="https://github.com/robsimmons/dusa/blob/main/README.md">Dusa</a>
           </div>
         </div>
-        <div id="session" class="dk-session">
-          <div id="codemirror-root" class="dk-edit"></div>
+        <div id="session" class="mobile-view-editor">
+          <div id="codemirror-root"></div>
           <div id="session-divider"></div>
-          <div id="react-root" class="dk-view"></div>
+          <div id="react-root"></div>
         </div>
       </div>
     </main>
