Refactor eeeeeveryyyyything into directories that make sense

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&family=Fira+Sans+Condensed&display=swap"
       rel="stylesheet"
     />
-    <link href="/src/reset.css" rel="stylesheet" />
-    <link href="/src/dusa.css" rel="stylesheet" />
-    <link href="/src/codemirror.css" rel="stylesheet" />
+    <link href="/src/web/reset.css" rel="stylesheet" />
+    <link href="/src/web/dusa.css" rel="stylesheet" />
+    <link href="/src/web/codemirror.css" rel="stylesheet" />
     <link rel="icon" href="/dusa-icon.svg" />
     <link rel="mask-icon" href="/dusa-icon.svg" color="#007FBC" />
   </head>
@@ -33,6 +33,6 @@
         </div>
       </div>
     </main>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/web/main.tsx"></script>
   </body>
 </html>
