--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
       <div class="dk-sessions">
         <div class="dk-header">
           <div id="dk-tabs" class="dk-tabs"></div>
-          <div class="dk-logo">
-            <a href="https://github.com/robsimmons/dusa/blob/main/README.md">Dusa</a>
-          </div>
+          <div class="dk-logo">Dusa</div>
         </div>
         <div id="session" class="mobile-view-editor">
           <div id="codemirror-root"></div>
